samples/_failures_safe/1761293569_364d5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d90f18c3.c: In function ‘main’:
./samples/SAFE/__tmp_d90f18c3.c:178:30: error: expected ‘)’ at end of input
  178 |         switch (machine.state
      |                ~             ^
      |                              )
./samples/SAFE/__tmp_d90f18c3.c:178:9: error: expected declaration or statement at end of input
  178 |         switch (machine.state
      |         ^~~~~~
./samples/SAFE/__tmp_d90f18c3.c:178:9: error: expected declaration or statement at end of input
